--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "proto-es6",
-  "description": "proto-es6",
+  "name": "proto",
+  "description": "proto",
   "scripts": {
     "start": "budo index.js -ol -- -t [ babelify --presets [ es2015 stage-0 react ] ] --extension='.jsx' | garnish"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sugarshin/proto-es6"
+    "url": "https://github.com/sugarshin/proto"
   },
   "author": "sugarshin",
   "license": "MIT"
